--- a/Assignment4/Assignment4.fsproj
+++ b/Assignment4/Assignment4.fsproj
@@ -6,6 +6,8 @@
   <ItemGroup>
     <Compile Include="MultiSet.fsi" />
     <Compile Include="MultiSet.fs" />
+    <Compile Include="Dictionary.fsi" />
+    <Compile Include="Dictionary.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 </Project>
